'add_notify_icon'

--- a/views/home.html
+++ b/views/home.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" href="/icons/icon-512.png" type="image/png">
 <link rel="apple-touch-icon" href="/icons/icon-192.png">
+<script src="https://unpkg.com/lucide@latest"></script>
 
   <title>מערכת ניהול משמרות • דף הבית</title>
   <link rel="stylesheet" href="/css/style.css" />
@@ -105,6 +106,7 @@
 <header class="brandbar">
   <span class="brand-title">NEW DELI</span>
   <span class="burger" id="burger">&#9776;</span>
+    <span class="notif-icon" id="enableNotifications">🔔</span>
 </header>
 
 <nav class="mobile-nav" id="mobileNav">
