--- a/views/invoices.html
+++ b/views/invoices.html
@@ -9,6 +9,7 @@
   <link rel="manifest" href="/manifest.json">
   <meta name="theme-color" content="#2b5329">
   <link rel="icon" href="/icons/icon-512.png" type="image/png">
+<script src="https://unpkg.com/lucide@latest"></script>
 
   <style>
     :root {
@@ -210,6 +211,9 @@ input[type="file"] {
 <header class="brandbar">
   <span class="brand-title">NEW DELI</span>
   <span class="burger" id="burger">&#9776;</span>
+  <span class="notif-icon" id="enableNotifications">
+    <i data-lucide="bell"></i>
+  </span>
 </header>
 
   <nav class="mobile-nav" id="mobileNav">
