--- a/views/manage.html
+++ b/views/manage.html
@@ -6,6 +6,7 @@
   <title>NEW DELI • ניהול משמרת</title>
   <link rel="stylesheet" href="/css/style.css?v=2">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+<script src="https://unpkg.com/lucide@latest"></script>
 
   <link rel="icon" href="/icons/icon-512.png" type="image/png">
 <link rel="manifest" href="/manifest.json">
@@ -95,6 +96,9 @@
 <header class="brandbar">
   <span class="brand-title">NEW DELI</span>
   <span class="burger" id="burger">&#9776;</span>
+  <span class="notif-icon" id="enableNotifications">
+    <i data-lucide="bell"></i>
+  </span>
 </header>
 
 <nav class="mobile-nav" id="mobileNav">
