--- a/views/suppliers.html
+++ b/views/suppliers.html
@@ -6,6 +6,7 @@
   <title>NEW DELI • ניהול ספקים</title>
   <link rel="stylesheet" href="/css/style.css?v=2" />
   <link rel="icon" href="/icons/icon-512.png" type="image/png">
+<script src="https://unpkg.com/lucide@latest"></script>
 
   <style>
     :root { --green:#2b5329; --bg:#fbfff6; --border:#e2eadc; --ink:#0a0a0a; }
@@ -31,10 +32,12 @@
   <link rel="stylesheet" href="/css/premium.css">
   <script defer src="/js/ui.js"></script>
 </head>
-<body class="theme-dark-premium">
-  <header class="brandbar">
+<header class="brandbar">
   <span class="brand-title">NEW DELI</span>
   <span class="burger" id="burger">&#9776;</span>
+  <span class="notif-icon" id="enableNotifications">
+    <i data-lucide="bell"></i>
+  </span>
 </header>
 
 <nav class="mobile-nav" id="mobileNav">
