--- a/views/dispersals.html
+++ b/views/dispersals.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="/css/style.css?v=2" />
   <link rel="icon" href="/icons/icon-512.png" type="image/png">
 
+<script src="https://unpkg.com/lucide@latest"></script>
 
   <link rel="manifest" href="/manifest.json">
 <meta name="theme-color" content="#2b5329">
@@ -136,10 +137,12 @@
   <link rel="stylesheet" href="/css/premium.css">
   <script defer src="/js/ui.js"></script>
 </head>
-<body class="theme-dark-premium">
-  <header class="brandbar">
+<header class="brandbar">
   <span class="brand-title">NEW DELI</span>
   <span class="burger" id="burger">&#9776;</span>
+  <span class="notif-icon" id="enableNotifications">
+    <i data-lucide="bell"></i>
+  </span>
 </header>
 
 <nav class="mobile-nav" id="mobileNav">
