--- a/views/index.html
+++ b/views/index.html
@@ -7,6 +7,7 @@
   <link rel="icon" href="/icons/icon-512.png" type="image/png">
 <link rel="manifest" href="/manifest.json">
 <meta name="theme-color" content="#2b5329">
+<script src="https://unpkg.com/lucide@latest"></script>
 
   <link rel="stylesheet" href="/css/style.css?v=2">
   <link rel="stylesheet" href="/css/premium.css">
@@ -57,6 +58,9 @@
 <header class="brandbar">
   <span class="brand-title">NEW DELI</span>
   <span class="burger" id="burger">&#9776;</span>
+  <span class="notif-icon" id="enableNotifications">
+    <i data-lucide="bell"></i>
+  </span>
 </header>
 
 <nav class="mobile-nav" id="mobileNav">
