--- a/views/orders.html
+++ b/views/orders.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>NEW DELI • הזמנות יומיות</title>
   <link rel="icon" href="/icons/icon-512.png" type="image/png">
+<script src="https://unpkg.com/lucide@latest"></script>
 
   <link rel="stylesheet" href="/css/style.css?v=2" />
   <style>
@@ -31,10 +32,12 @@
   <link rel="stylesheet" href="/css/premium.css">
   <script defer src="/js/ui.js"></script>
 </head>
-<body class="theme-dark-premium">
-  <header class="brandbar">
+<header class="brandbar">
   <span class="brand-title">NEW DELI</span>
   <span class="burger" id="burger">&#9776;</span>
+  <span class="notif-icon" id="enableNotifications">
+    <i data-lucide="bell"></i>
+  </span>
 </header>
 
 <nav class="mobile-nav" id="mobileNav">
