--- a/views/tasks.html
+++ b/views/tasks.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <title>ניהול משימות</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<script src="https://unpkg.com/lucide@latest"></script>
 
   <link rel="stylesheet" href="/css/style.css?v=2" />
   <link rel="stylesheet" href="/css/premium.css" />
@@ -155,6 +156,9 @@
 <header class="brandbar">
   <span class="brand-title">NEW DELI</span>
   <span class="burger" id="burger">&#9776;</span>
+  <span class="notif-icon" id="enableNotifications">
+    <i data-lucide="bell"></i>
+  </span>
 </header>
 
 <nav class="mobile-nav" id="mobileNav">
