--- a/views/dispersals.html
+++ b/views/dispersals.html
@@ -140,10 +140,11 @@
 <header class="brandbar">
   <span class="brand-title">NEW DELI</span>
   <span class="burger" id="burger">&#9776;</span>
-  <span class="notif-icon" id="enableNotifications">
-    <i data-lucide="bell"></i>
+  <span class="notif-icon" id="notifToggle" title="אפשר התראות">
+    <i data-lucide="bell-off"></i>
   </span>
 </header>
+
 
 <nav class="mobile-nav" id="mobileNav">
   <button id="closeNav" class="close-btn">✖</button>
