--- a/views/manage.html
+++ b/views/manage.html
@@ -94,12 +94,15 @@
 </style>
 <body class="theme-dark-premium">
 <header class="brandbar">
+  <div class="brandbar-left">
+    <button id="notifToggle" class="icon-btn">
+      <i data-lucide="bell-off"></i>
+    </button>
+    <span class="burger" id="burger">&#9776;</span>
+  </div>
   <span class="brand-title">NEW DELI</span>
-  <span class="burger" id="burger">&#9776;</span>
-  <span class="notif-icon" id="notifToggle" title="אפשר התראות">
-    <i data-lucide="bell-off"></i>
-  </span>
 </header>
+
 
 
 <nav class="mobile-nav" id="mobileNav">
