--- a/views/admin-login.html
+++ b/views/admin-login.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="he" dir="rtl">
 <head>
-  <meta charset="UTF-8" />
+<meta charset="UTF-8" />
+<link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;700&display=swap" rel="stylesheet">
+
+
   <link rel="icon" href="/icons/icon-512.png" type="image/png">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>כניסת מנהל • NEW DELI</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="/css/style.css" />
   
 <link rel="manifest" href="/manifest.json">
 <meta name="theme-color" content="#2b5329">
