--- a/public/css/style.css
+++ b/public/css/style.css
@@ -54,7 +54,7 @@
   margin: 0;
   padding: 0;
   transition: all 0.3s ease;
-  font-family: Arial, Helvetica, sans-serif;
+font-family: 'Heebo', Arial, sans-serif;
 
 }
 .exec-sections { display: grid; gap: 10px; }
