--- a/views/dispersals.html
+++ b/views/dispersals.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="he" dir="rtl">
 <head>
-  <meta charset="UTF-8" />
+<meta charset="UTF-8" />
+<link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;700&display=swap" rel="stylesheet">
+
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>NEW DELI • פיזורים</title>
