--- a/views/home.html
+++ b/views/home.html
@@ -110,7 +110,7 @@ font-family: 'Heebo', Arial, sans-serif;
 <header class="brandbar">
   <div class="brandbar-left">
     <span class="burger" id="burger">&#9776;</span>
-        <button id="notifToggle" class="icon-btn">
+        <button style=":hover{background-color: none;}" id="notifToggle" class="icon-btn">
       <i data-lucide="bell-off"></i>
     </button>
   </div>
