--- a/public/css/style.css
+++ b/public/css/style.css
@@ -567,7 +567,7 @@ button:hover {
 /* מודאל */
 .modal{position:fixed;inset:0;background:rgba(0,0,0,.35);display:flex;align-items:center;justify-content:center;z-index:1000}
 .modal-content{
-  background:var(--panel); width:min(940px,95vw); max-height:90vh; overflow:auto;
+  background: rgb(31, 43, 56); width:min(940px,95vw); max-height:90vh; overflow:auto;
   border-radius:16px; border:2px solid var(--radius); box-shadow: var(--shadow-4);
   padding:22px;
 }
