--- a/views/manage.html
+++ b/views/manage.html
@@ -175,9 +175,9 @@
   <h3>הערות למשמרת</h3>
   <div id="managerNotes"></div>
 </section> -->
-<li style="display:flex; align-items:center; background:#fbfff6;border:1px dashed #d7efd0;border-radius:10px;padding:8px 10px;margin:6px 0">
+<li style="display:flex; align-items:center; background: linear-gradient(180deg, #1f2937, #111827);border:1px dashed #d7efd0;border-radius:10px;padding:8px 10px;margin:6px 0">
   <span style="font-weight: bold; margin-left: 6px;">הערות למשמרת:</span>
-  <span id="managerNotes" style="font-size:14px;color:#2b5329"></span>
+  <span id="managerNotes" style="font-size:14px;color:white"></span>
 </li>
 
 
