--- a/views/invoices.html
+++ b/views/invoices.html
@@ -385,7 +385,7 @@ input[type="file"] {
           <td>${escapeHtml(r.shiftDate || '')}</td>
           <td>${escapeHtml(r.supplier || '')}</td>
           <td>
-            <a href="${r.url}" target="_blank" style="color: #2f9e44;" title="${escapeHtml(r.originalName || '')}">
+            <a href="${r.url}" target="_blank" style="color: white;" title="${escapeHtml(r.originalName || '')}">
               צפייה בקובץ
             </a>
           </td>
