--- a/views/orders.html
+++ b/views/orders.html
@@ -175,7 +175,7 @@ document.getElementById('dateInput').addEventListener('change', updateWeekdayHin
         const card = document.createElement('div');
         card.className = 'card supplier';
         card.innerHTML = `
-          <h3>${escapeHtml(b.supplier)}</h3>
+          <h3 style="color: white;">${escapeHtml(b.supplier)}</h3>
           <div style="overflow:auto">
             <table>
               <thead>
