--- a/views/admin.html
+++ b/views/admin.html
@@ -134,7 +134,8 @@
   <br>
 
   <div class="container">
-    <h1>דף מנהל – משמרות</h1>
+    <h1 style="margin-top: 50px;">דף ניהול 🚕</h1>
+    <!-- <h1>דף מנהל – משמרות</h1> -->
 
     <div class="admin-controls">
       <input type="date" id="filterDate" />
